Rename NPM package to @ui4ngx/fontawesome

--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>@ngx/fontawesome Demo</title>
+    <title>@ui4ngx/fontawesome Demo</title>
     <base href="/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,6 +13,6 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/highlight.min.js"></script>
 </head>
 <body>
-    <demo-app>Loading @ngx/fontawesome demo application ...</demo-app>
+    <demo-app>Loading @ui4ngx/fontawesome demo application ...</demo-app>
 </body>
 </html>
